# axum-shuttle-postgres-authentication-demo

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  schema.sql
.github/workflows/: deploy.yml
public/: styles.css
src/: authentication.rs  errors.rs  lib.rs  main.rs  utils.rs
templates/: base.html  index.html  login.html  me.html  signup.html  user.html  users.html
tests/: password.rs
