[package]
name = "axum-postgres-authentication"
version = "0.1.0"
edition = "2021"
publish = false
# exclude = ["public/", "templates/", ".env", "src/main.rs", "tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["multipart"] }
http = "0.2.8"
http-body = "0.4.5"
once_cell = "1.13.0"
pbkdf2 = "0.10"
rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls"] }
tera = { version = "1.16.0", default_features = false }
tokio = { version = "1.20.1", features = ["rt", "macros"] }
sync_wrapper = "0.1.1"
shuttle-service = { version = "0.4.1", features = [
    "sqlx-postgres",
    "web-axum",
] }

[lib]
# lib for debug binary (main), cdylib for shuttle deploy
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
