[package]
name = "axum-postgres-authentication"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
axum = { version = "0.5.13", features = ["multipart"] }
http = "0.2.8"
http-body = "0.4.5"
once_cell = "1.13.0"
pbkdf2 = "0.11.0"
rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"] }
tera = { version = "1.16.0", default_features = false }
sync_wrapper = "0.1.1"
shuttle-service = { version = "0.7.1", features = ["web-axum"] }
shuttle-shared-db = { version = "0.7.1", features = ["postgres"] }
cookie = "0.16.0"
